:bug: fixed image resizing bug on mobile

--- a/_css/grid/_grid.css
+++ b/_css/grid/_grid.css
@@ -10,6 +10,8 @@
 
     .layoutGrid > * {
         grid-column: main;
+        padding-left: var(--small);
+        padding-right: var(--small);
     }
 
     .layoutGrid > .highlight,
