--- a/_css/layout/_generated-code.css
+++ b/_css/layout/_generated-code.css
@@ -18,12 +18,10 @@ Control styles output by Markdown
     color: var(--red);
     font-size: var(--medium);
     margin: var(--small) 0 0 0;
-    padding: 0;
 }
 
 .e-content > ul,
 .e-content > ol {
-    padding: 0;
     margin: 0 0 var(--medium) 0;
 }
 
