--- a/_css/layout/_images.css
+++ b/_css/layout/_images.css
@@ -1,4 +1,6 @@
 img {
+    display: block;
+    width: 100%;
     border-style: none;
 }
 
