--- a/_css/utility/_base.css
+++ b/_css/utility/_base.css
@@ -88,6 +88,7 @@ blockquote {
 }
 
 cite {
+    color: var(--light-grey);
     max-width: 300px;
     font-style: normal;
     font-size: var(--small);
