--- a/_css/utility/_variables.css
+++ b/_css/utility/_variables.css
@@ -3,6 +3,7 @@
     --white: rgba(255, 255, 255, 1);
     --red: rgba(200, 53, 57, 1);
     --grey: rgba(96, 96, 96, 1);
+    --light-grey: rgba(146, 146, 146, 1);
     --dark-blue: rgba(0, 27, 68, 1);
     --column-width: 36rem;
     --extra-small: 0.618rem;
